// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherIconSelector Component Should render clear icon if weather is clear 1`] = `
<div>
  <img
    alt="Clear"
    src="icons/weather-sun.svg"
  />
</div>
`;

exports[`WeatherIconSelector Component Should render cloudy icon if weather is rainy 1`] = `
<div>
  <img
    alt="Cloudy"
    src="icons/weather-cloud.svg"
  />
</div>
`;
